[gd_scene load_steps=4 format=3 uid="uid://ft3kd5aq2k5x"]

[ext_resource type="PackedScene" uid="uid://c3ke0puhchryw" path="res://tako_menu.tscn" id="1_ht6b6"]
[ext_resource type="Theme" uid="uid://8f85y4asiu44" path="res://gravitako_theme.tres" id="1_sy1d3"]
[ext_resource type="Script" path="res://Menu.gd" id="1_xwvxl"]

[node name="Main" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_xwvxl")

[node name="tako menu" parent="." instance=ExtResource("1_ht6b6")]

[node name="Menu" type="HBoxContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Menu" type="Control" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="Menu/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.176471, 0.121569, 0.223529, 0.505882)

[node name="MarginContainer" type="MarginContainer" parent="Menu/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sy1d3")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Menu/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Menu/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_sy1d3")
text = "- Paused -"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Menu/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_sy1d3")

[node name="Pause-Start" type="Button" parent="Menu/Menu/MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("1_sy1d3")
action_mode = 0
text = "Start Game"

[node name="Volume" type="Label" parent="Menu/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_sy1d3")
text = "Volume: "

[node name="VolSlider" type="HSlider" parent="Menu/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 19.0
value = 10.0
rounded = true
tick_count = 19
ticks_on_borders = true

[node name="Sensibility" type="Label" parent="Menu/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_sy1d3")
text = "Cam. Sensibility: "

[node name="CamSlider" type="HSlider" parent="Menu/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 19.0
value = 10.0
rounded = true
tick_count = 19
ticks_on_borders = true

[node name="Window Mode" type="CheckButton" parent="Menu/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_sy1d3")
action_mode = 0
text = "Fullscreen"

[node name="Scale" type="CheckButton" parent="Menu/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_sy1d3")
action_mode = 0
text = "Half Resolution"

[node name="Back" type="Button" parent="Menu/Menu/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("1_sy1d3")
action_mode = 0
text = "Back to menu"

[connection signal="pressed" from="Menu/Menu/MarginContainer/VBoxContainer/Pause-Start" to="." method="_on_pause_start_pressed"]
[connection signal="pressed" from="Menu/Menu/MarginContainer/VBoxContainer/Window Mode" to="." method="_on_window_mode_pressed"]
[connection signal="pressed" from="Menu/Menu/MarginContainer/VBoxContainer/Scale" to="." method="_on_scale_pressed"]
[connection signal="pressed" from="Menu/Menu/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
